# axiprop_utils

./: .gitignore  pyproject.toml  ruff.toml
axiprop_utils/: __init__.py  axiparabola.py  optical_elements.py  pulse.py  utils.py
test/: test_2d.py  test_3d.py  test_lasy.py
